tests/ui/index-unsupported.stderr
error: Unsupported index type: blah
 --> tests/ui/index-unsupported.rs:5:26
  |
5 |     #[cryptonamo(query = "blah")]
  |                          ^^^^^^
